# mailsac-pyclient

./: README.md  conftest.py  pyproject.toml  setup.py  upload-to-pypi.sh
.github/workflows/: test-and-package.yml  upload-to-pypi.yml  upload-to-testpypi.yml
pymailsac/: client.py
tests/: test_client.py  test_exceptions.py
tests/integration/: test_client.py
tests/unit/: test_basic_client.py  test_exceptions.py
