[tool.poetry]
name = "mailsac-pyclient"
version = "0.1.0"
description = ""
authors = ["GSejas <jsequeira03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
sib-api-v3-sdk = "^7.6.0"
pytest-cov = "^6.0.0"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
